----------------------------------------- 
Simple x264/x265 Launcher version history 
----------------------------------------- 

Version 2.81 [2017-??-??]
* Updated x265 to version 2.3+32
* Updated NVEncC to version 3.07

Version 2.80 [2017-04-01]
* Another attempt to fix application startup error "0xc0000005"
* Some tweaks to speed-up the update checker

Version 2.79 [2017-03-23]
* Updated x265 to version 2.3+22
* Fixed possible application startup error "0xc0000005"

Version 2.78 [2017-01-07]
* Updated x265 to version 2.2+22
* Updated Avs2YUV to version 0.24 (BugMaster's mod 5)
* Added new option to save pending jobs *without* confirmation
* Some fixes to parameter validation code

Version 2.77 [2016-12-13]
* Updated x265 to version 2.1+69
* Updated x264 to revision 2744
* Updated NVEncC to version 3.02

Version 2.76 [2016-10-21]
* Updated x265 to version 2.1+25
* Updated NVEncC to version 3.01
* Detection of "portable" VapourSynth (see README for details!)
* Detection of "portable" Avisynth (see README for details!)

Version 2.75 [2016-09-25]
* Updated build environment to Visual Studio 2015 with Update-3
* Updated x264 to revision 2721
* Updated x265 to version 2.0+54
* Updated NVEncC to version 2.11

Version 2.74 [2016-07-18]
* Updated x265 to version 2.0+2

Version 2.73 [2016-07-03]
* Updated x264 to revision 2705
* Updated x265 to version 1.9+227

Version 2.72 [2016-06-17]
* Now actually contains the "x64" version of NVEncC

Version 2.71 [2016-06-12]
* Updated x265 to version 1.9+200
* Added experimental NVEncC (NVIDIA GPU encoding) support
* Code refactoring
* Fixed various included web-links

Version 2.70 [2016-04-29]
* Fixed potential VapourSynth error, when Avisynth is *not* installed
* Some installer improvements

Version 2.69 [2016-04-23]
* Updated x264 to revision 2692
* Updated x265 to version 1.9+140
* Some improvements to auto-update functionality

Version 2.68 [2016-04-09]
* Updated build environment to Visual Studio 2015 with Update-2