@@ -26,7 +26,7 @@
 #define VER_X264_MAJOR 2
 #define VER_X264_MINOR 8
 #define VER_X264_PATCH 0
-#define VER_X264_BUILD 1106
+#define VER_X264_BUILD 1107
 
 #define VER_X264_PORTABLE_EDITION (0)
 
