@@ -5,6 +5,7 @@ Simple x264/x265 Launcher version history
 Version 2.81 [2017-??-??]
 * Updated x265 to version 2.3+32
 * Updated NVEncC to version 3.07
+* Save log files to the same directory as the output file
 
 Version 2.80 [2017-04-01]
 * Another attempt to fix application startup error "0xc0000005"
